--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1689,7 +1689,7 @@ LeadSummaryScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-    PopopNotificationSS As groupContainer.manualLayoutContainer:
+    PopopNotificationLSS As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.29)
         Height: =Parent.Height
         Visible: =VarNotification
@@ -1754,14 +1754,14 @@ LeadSummaryScreen As screen:
                 Width: =Parent.Width/5
                 ZIndex: =3
 
-    grpMenuDS_4 As group:
+    grpMenuLSS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =4
 
-        ctnBackgroundMenuDS_5 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuLSS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -1769,11 +1769,11 @@ LeadSummaryScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuBarDS_4 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuBarLSS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarDS_4.AllItems)*(glryMenuBarDS_4.TemplateHeight))
+            Height: =1.08*(CountRows(glryMenuBarLSS.AllItems)*(glryMenuBarLSS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -1785,14 +1785,14 @@ LeadSummaryScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuDS_4 As groupContainer.manualLayoutContainer:
+            ctnMenuLSS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
                 Width: =Parent.Width/1.02
                 ZIndex: =8
 
-                lblMenuDS_4 As label:
+                lblMenuLSS As label:
                     AutoHeight: =true
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =24
@@ -1802,12 +1802,12 @@ LeadSummaryScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
-                    Width: =Parent.Width-iconMenuDS_4.Width-lineIndicatorDS_4.Width
-                    X: =iconMenuDS_4.Width+iconMenuDS_4.X
+                    Width: =Parent.Width-iconMenuLSS.Width-lineIndicatorLSS.Width
+                    X: =iconMenuLSS.Width+iconMenuLSS.X
                     Y: =30
                     ZIndex: =1
 
-                iconMenuDS_4 As icon.Add:
+                iconMenuLSS As icon.Add:
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
@@ -1816,7 +1816,7 @@ LeadSummaryScreen As screen:
                     Y: =30
                     ZIndex: =3
 
-                btnMensuDS_4 As button:
+                btnMenuLSS As button:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =80
                     HoverFill: =
@@ -1829,7 +1829,7 @@ LeadSummaryScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =4
 
-                lineIndicatorDS_4 As rectangle:
+                lineIndicatorLSS As rectangle:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
