--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -165,7 +165,7 @@ LeadSummaryScreen As screen:
                 SummaryForm As form:
                     DataSource: =LeadInformations
                     FillPortions: =0
-                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+'CustomerContact _DataCard3'.Height+'CustomerName _DataCard3'.Height+30
+                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+'CustomerContact _DataCard3'.Height+CustomerNameLSS.Height+30
                     Item: =VarFormMode
                     LayoutMinHeight: =250
                     LayoutMinWidth: =Parent.Width
@@ -1305,7 +1305,7 @@ LeadSummaryScreen As screen:
                             X: =40
                             ZIndex: =5
 
-                    "'CustomerName _DataCard3' As typedDataCard.textualEditCard":
+                    CustomerNameLSS As typedDataCard.textualEditCard:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="shlrf_customername"
@@ -1316,14 +1316,14 @@ LeadSummaryScreen As screen:
                         Height: =50
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customername")
                         Required: =false
-                        Update: =DataCardValue7.Text
+                        Update: =IntxtCustomerNameLSS.Text
                         Visible: =VarCommunication
                         Width: =Parent.Width
                         X: =50
                         Y: =15
                         ZIndex: =1
 
-                        Rectangle7_2 As rectangle:
+                        borderCustomerNameLSS As rectangle:
                             BorderColor: =RGBA(237, 237, 237, 1)
                             Fill: =RGBA(237, 237, 237, 1)
                             Height: =96
@@ -1331,7 +1331,7 @@ LeadSummaryScreen As screen:
                             X: =40
                             ZIndex: =1
 
-                        DataCardKey7 As label:
+                        lblCustomerNameLSS As label:
                             AutoHeight: =true
                             Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
@@ -1343,7 +1343,7 @@ LeadSummaryScreen As screen:
                             Y: =10
                             ZIndex: =2
 
-                        DataCardValue7 As text:
+                        IntxtCustomerNameLSS As text:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             Default: =VarCustomerNameSummary
                             DelayOutput: =true
@@ -1353,7 +1353,7 @@ LeadSummaryScreen As screen:
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(255, 255, 255, 1)
                             MaxLength: =Parent.MaxLength
-                            OnChange: =Set(VarCustomerNameSummary,DataCardValue7.Text)
+                            OnChange: =Set(VarCustomerNameSummary,IntxtCustomerNameLSS.Text)
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
                             RadiusBottomRight: =0
@@ -1362,10 +1362,10 @@ LeadSummaryScreen As screen:
                             Tooltip: =Parent.DisplayName
                             Width: =Parent.Width - 120
                             X: =50
-                            Y: =DataCardKey7.Y + DataCardKey7.Height + 5
+                            Y: =lblCustomerNameLSS.Y + lblCustomerNameLSS.Height + 5
                             ZIndex: =3
 
-                        ErrorMessage7 As label:
+                        ErrorMessageLSS As label:
                             AutoHeight: =true
                             Height: =10
                             Live: =Live.Assertive
@@ -1377,17 +1377,17 @@ LeadSummaryScreen As screen:
                             Visible: =Parent.DisplayMode=DisplayMode.Edit
                             Width: =Parent.Width - 60
                             X: =30
-                            Y: =DataCardValue7.Y + DataCardValue7.Height
+                            Y: =IntxtCustomerNameLSS.Y + IntxtCustomerNameLSS.Height
                             ZIndex: =4
 
-                        StarVisible7 As label:
+                        StarVisibleLSS As label:
                             Align: =Align.Center
-                            Height: =DataCardKey7.Height
+                            Height: =lblCustomerNameLSS.Height
                             Text: ="*"
                             Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                             Width: =30
                             Wrap: =false
-                            Y: =DataCardKey7.Y
+                            Y: =lblCustomerNameLSS.Y
                             ZIndex: =5
 
                     "'CustomerContact _DataCard3' As typedDataCard.textualEditCard":
@@ -1613,7 +1613,7 @@ LeadSummaryScreen As screen:
                                 AdditionalExpensesRequired: cboxAELSS.Value,
                                 TravelRequired: cboxTravelRequiredLSS.Value,
                                 CommunicatedToCustomer: CboxCCLSS.Value,
-                                'CustomerName ':DataCardKey7.Text,
+                                'CustomerName ':lblCustomerNameLSS.Text,
                                 'CustomerContact ':lblContactNumber_1.Text,
                                 LeadStatus: "Submitted",
                                 Email: User().Email,
