--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -165,7 +165,7 @@ LeadSummaryScreen As screen:
                 SummaryForm As form:
                     DataSource: =LeadInformations
                     FillPortions: =0
-                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+'CustomerContact _DataCard3'.Height+CustomerNameLSS.Height+30
+                    Height: =ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+CustomerContactLSS.Height+CustomerNameLSS.Height+30
                     Item: =VarFormMode
                     LayoutMinHeight: =250
                     LayoutMinWidth: =Parent.Width
@@ -1390,7 +1390,7 @@ LeadSummaryScreen As screen:
                             Y: =lblCustomerNameLSS.Y
                             ZIndex: =5
 
-                    "'CustomerContact _DataCard3' As typedDataCard.textualEditCard":
+                    CustomerContactLSS As typedDataCard.textualEditCard:
                         BorderColor: =RGBA(202, 202, 202, 1)
                         BorderStyle: =BorderStyle.Solid
                         DataField: ="shlrf_customercontact"
@@ -1401,7 +1401,7 @@ LeadSummaryScreen As screen:
                         Height: =50
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                         Required: =false
-                        Update: =IntxtContactNumberES_1.Text
+                        Update: =IntxtContactNumberLSS.Text
                         Visible: =VarCommunication
                         Width: =Parent.Width
                         X: =50
@@ -1416,7 +1416,7 @@ LeadSummaryScreen As screen:
                             X: =40
                             ZIndex: =1
 
-                        DataCardKey8 As label:
+                        lblCustomerContactLSS As label:
                             AutoHeight: =true
                             Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
@@ -1428,7 +1428,7 @@ LeadSummaryScreen As screen:
                             Y: =10
                             ZIndex: =2
 
-                        ErrorMessage8 As label:
+                        ErrorMessageContactNumberLSS As label:
                             AutoHeight: =true
                             Height: =10
                             Live: =Live.Assertive
@@ -1440,20 +1440,20 @@ LeadSummaryScreen As screen:
                             Visible: =Parent.DisplayMode=DisplayMode.Edit
                             Width: =Parent.Width - 60
                             X: =30
-                            Y: =IntxtContactNumberES_1.Y + IntxtContactNumberES_1.Height
+                            Y: =IntxtContactNumberLSS.Y + IntxtContactNumberLSS.Height
                             ZIndex: =3
 
-                        StarVisible8 As label:
+                        StarVisibleContactNumberLSS As label:
                             Align: =Align.Center
-                            Height: =DataCardKey8.Height
+                            Height: =lblCustomerContactLSS.Height
                             Text: ="*"
                             Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                             Width: =30
                             Wrap: =false
-                            Y: =DataCardKey8.Y
+                            Y: =lblCustomerContactLSS.Y
                             ZIndex: =4
 
-                        IntxtContactNumberES_1 As text:
+                        IntxtContactNumberLSS As text:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             BorderThickness: =1
                             Default: =VarformattedNumberSummary
@@ -1468,7 +1468,7 @@ LeadSummaryScreen As screen:
                             HoverFill: =RGBA(255, 255, 255, 1)
                             MaxLength: =10
                             OnChange: |-
-                                =If(Len(IntxtContactNumberES_1.Text)=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES_1.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true), If(!IsBlank(IntxtContactNumberES_1.Text) && Len(IntxtContactNumberES_1.Text)<>10, Set(Varerrormessage, true); Set(varContactNumber, false)));
+                                =If(Len(IntxtContactNumberLSS.Text)=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberLSS.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true), If(!IsBlank(IntxtContactNumberLSS.Text) && Len(IntxtContactNumberLSS.Text)<>10, Set(Varerrormessage, true); Set(varContactNumber, false)));
                             OnSelect: =If(varContactNumber=true,Set(varContactNumber,true));
                             PaddingLeft: =5
                             RadiusBottomLeft: =0
@@ -1482,14 +1482,14 @@ LeadSummaryScreen As screen:
                             Y: =lblContactES.Y + lblContactES.Height + 5
                             ZIndex: =5
 
-                        lblContactNumber_1 As label:
+                        lblContactNumberLSS As label:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                             BorderThickness: =2
                             DisabledBorderColor: =RGBA(202, 202, 202, 1)
                             DisabledFill: =RGBA(255, 255, 255, 1)
                             Fill: =RGBA(255, 255, 255, 1)
                             Font: =Font.Arial
-                            Height: =IntxtContactNumberES_1.Height
+                            Height: =IntxtContactNumberLSS.Height
                             OnSelect: =Set(varContactNumber,false);
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: |-
@@ -1498,7 +1498,7 @@ LeadSummaryScreen As screen:
                             Visible: =varContactNumber
                             Width: =Parent.Width-120
                             X: =50
-                            Y: =IntxtContactNumberES_1.Y
+                            Y: =IntxtContactNumberLSS.Y
                             ZIndex: =6
 
                 "glryImageLSS As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
@@ -1614,7 +1614,7 @@ LeadSummaryScreen As screen:
                                 TravelRequired: cboxTravelRequiredLSS.Value,
                                 CommunicatedToCustomer: CboxCCLSS.Value,
                                 'CustomerName ':lblCustomerNameLSS.Text,
-                                'CustomerContact ':lblContactNumber_1.Text,
+                                'CustomerContact ':lblContactNumberLSS.Text,
                                 LeadStatus: "Submitted",
                                 Email: User().Email,
                                 MechanicName: User().FullName,
