--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1408,7 +1408,7 @@ LeadSummaryScreen As screen:
                         Y: =16
                         ZIndex: =1
 
-                        Rectangle7_3 As rectangle:
+                        borderCustomerContactLSS As rectangle:
                             BorderColor: =RGBA(237, 237, 237, 1)
                             Fill: =RGBA(237, 237, 237, 1)
                             Height: =96
