--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -708,14 +708,14 @@ SubmittedLeadScreen As screen:
                     Y: =000
                     ZIndex: =2
 
-    grpMenuDS_5 As group:
+    grpMenuSLS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =4
 
-        ctnBackgroundMenuDS_6 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuSLS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -723,11 +723,11 @@ SubmittedLeadScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuBarDS_5 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuBarSLS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarDS_5.AllItems)*(glryMenuBarDS_5.TemplateHeight))
+            Height: =1.08*(CountRows(glryMenuBarSLS.AllItems)*(glryMenuBarSLS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -739,14 +739,14 @@ SubmittedLeadScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuDS_5 As groupContainer.manualLayoutContainer:
+            ctnMenuSLS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
                 Width: =Parent.Width/1.02
                 ZIndex: =8
 
-                lblMenuDS_5 As label:
+                lblMenuSLS As label:
                     AutoHeight: =true
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =24
@@ -756,12 +756,12 @@ SubmittedLeadScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
-                    Width: =Parent.Width-iconMenuDS_5.Width-lineIndicatorDS_5.Width
-                    X: =iconMenuDS_5.Width+iconMenuDS_5.X
+                    Width: =Parent.Width-iconMenuSLS.Width-lineIndicatorSLS.Width
+                    X: =iconMenuSLS.Width+iconMenuSLS.X
                     Y: =30
                     ZIndex: =1
 
-                iconMenuDS_5 As icon.Add:
+                iconMenuSLS As icon.Add:
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
@@ -770,7 +770,7 @@ SubmittedLeadScreen As screen:
                     Y: =30
                     ZIndex: =3
 
-                btnMensuDS_5 As button:
+                btnMenuSLS As button:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =80
                     HoverFill: =
@@ -783,7 +783,7 @@ SubmittedLeadScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =4
 
-                lineIndicatorDS_5 As rectangle:
+                lineIndicatorSLS As rectangle:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
