--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -131,7 +131,7 @@ SubmittedLeadScreen As screen:
             Y: =ctnHeaderSLS.Y+ctnHeaderSLS.Height+10
             ZIndex: =2
 
-            btnheaderCL_1 As button:
+            btnheaderSLS As button:
                 Align: =Align.Left
                 Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
@@ -147,7 +147,7 @@ SubmittedLeadScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-            Label2 As label:
+            lblYearSLS As label:
                 Align: =Align.Right
                 Height: =Parent.Height
                 PaddingRight: =40
@@ -225,7 +225,7 @@ SubmittedLeadScreen As screen:
                         Text(Year('Created On'))=Title2.Text && If(Header="Open",LeadStatus="Submitted",LeadStatus=Header) && Email=User().Email) ,'Created On',SortOrder.Ascending),IntxtSearchBoxSLS.Text,"shlrf_contractnumber","shlrf_address","shlrf_buildingname","shlrf_zipcode")
                     Layout: =Layout.Vertical
                     TemplatePadding: =0
-                    TemplateSize: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",280,180)
+                    TemplateSize: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",280,180)
                     Visible: |
                         =ThisItem.IsSelected && locInfoExpanded
                     Width: =Parent.Width/1.05
@@ -261,7 +261,7 @@ SubmittedLeadScreen As screen:
                             =//"Sold Incentives $ : "&  " " & 0
                             "Price:" & " " & 0
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                        Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Parent.Width/2.55
                         X: =20
                         Y: =lblEstimateNumberSLS.Height+lblEstimateNumberSLS.Y
@@ -281,9 +281,9 @@ SubmittedLeadScreen As screen:
                             "Potential Future Incentives $ :" & " " & "0",
                                       VarSoldIncetives=true,"Sold Incentives $:" & " " & "0",
                                       VarTotalIncentives=true,"Total Incentives $:" & " "& "0")*/
-                            If(btnheaderCL_1.Text="Quoted Leads","Proposed Incentives","Sold Incentives")
+                            If(btnheaderSLS.Text="Quoted Leads","Proposed Incentives","Sold Incentives")
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                        Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Parent.Width/1.08
                         X: =20
                         Y: =20
@@ -295,7 +295,7 @@ SubmittedLeadScreen As screen:
                         Fill: =RGBA(202, 202, 202, 1)
                         Height: =2
                         OnSelect: =Select(Parent)
-                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                        Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Separator3_1.Width-40
                         X: =20
                         Y: =lblTitleTotalIncentivesSLS.Y+lblTitleTotalIncentivesSLS.Height
@@ -312,7 +312,7 @@ SubmittedLeadScreen As screen:
                         Text: |-
                             ="Estimate Number :" & " " 
                         VerticalAlign: =VerticalAlign.Top
-                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                        Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Parent.Width/1.08
                         X: =20
                         Y: =lineEstimateSLS.Y+lineEstimateSLS.Height+10
@@ -329,10 +329,10 @@ SubmittedLeadScreen As screen:
                         Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                         Width: =Parent.Width/1.08
                         X: =20
-                        Y: =HtmlText2_4.Y+HtmlText2_4.Height
+                        Y: =htmltextContractNumberSLS.Y+htmltextContractNumberSLS.Height
                         ZIndex: =16
 
-                    HtmlText2_4 As htmlViewer:
+                    htmltextContractNumberSLS As htmlViewer:
                         AutoHeight: =true
                         Height: =20
                         HtmlText: |-
@@ -343,7 +343,7 @@ SubmittedLeadScreen As screen:
                         Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                         Width: =Parent.Width/1.08
                         X: =20
-                        Y: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",lineEstimatenoSLS.Y+lineEstimatenoSLS.Height+10,20)
+                        Y: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",lineEstimatenoSLS.Y+lineEstimatenoSLS.Height+10,20)
                         ZIndex: =17
 
                     htmltxtAddressSLS As htmlViewer:
@@ -426,7 +426,7 @@ SubmittedLeadScreen As screen:
                         Fill: =RGBA(202, 202, 202, 1)
                         Height: =2
                         OnSelect: =Select(Parent)
-                        Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                        Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                         Width: =Separator3_1.Width-40
                         X: =20
                         Y: =lblPriceSLS.Height+lblPriceSLS.Y
@@ -444,7 +444,7 @@ SubmittedLeadScreen As screen:
                             Set(VarLtdID,ThisItem.ID);
                         Width: =Parent.Width/15
                         X: =Parent.Width-2.5*(Self.Width)
-                        Y: =HtmlText2_4.Y
+                        Y: =htmltextContractNumberSLS.Y
                         ZIndex: =23
 
                 lblTitleYearSLS As label:
@@ -463,7 +463,7 @@ SubmittedLeadScreen As screen:
                         "Year"
                     Width: =Parent.Width/8
                     X: =10
-                    Y: =2*(Button3.Y)
+                    Y: =2*(btnLeadsSLS.Y)
                     ZIndex: =3
 
                 lblCountTotalLeadsSLS As label:
@@ -509,7 +509,7 @@ SubmittedLeadScreen As screen:
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width/3.3
                     X: =lblTitleYearSLS.Width+lblTitleYearSLS.X+20
-                    Y: =2*(Button3.Y)
+                    Y: =2*(btnLeadsSLS.Y)
                     ZIndex: =5
 
                 lblCountTotalIncentivesSLS As label:
@@ -524,7 +524,7 @@ SubmittedLeadScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,10,Parent.Width<500,11,14)
                     Text: |-
-                        =If(btnheaderCL_1.Text="Quoted Leads",Value(Sum(
+                        =If(btnheaderSLS.Text="Quoted Leads",Value(Sum(
                             Filter(
                                 GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' &&
                                 Year(Year) = Year(Now())),TotalproposedIncentives
@@ -534,7 +534,7 @@ SubmittedLeadScreen As screen:
                                 Year(Year) = Year(Now())),TotalSoldIncentives
                         )))
                     VerticalAlign: =VerticalAlign.Top
-                    Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                    Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                     Width: =Parent.Width/3
                     X: =lblTotalLeadsSLS.Width+lblTotalLeadsSLS.X+20
                     Y: =lblTotalIncentivesSLS.Y+lblTotalIncentivesSLS.Height+10
@@ -554,10 +554,10 @@ SubmittedLeadScreen As screen:
                         =//ThisItem.Value\
                         "Total Incentives"
                     VerticalAlign: =VerticalAlign.Top
-                    Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                    Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                     Width: =Parent.Width/3
                     X: =lblTotalLeadsSLS.X+lblTotalLeadsSLS.Width
-                    Y: =2*(Button3.Y)
+                    Y: =2*(btnLeadsSLS.Y)
                     ZIndex: =7
 
                 rectangleYearSLS As rectangle:
@@ -571,22 +571,7 @@ SubmittedLeadScreen As screen:
                         If(Parent.Width<378,Parent.Width/1.06,Parent.Width<500,Parent.Width/1.06,Parent.Width/1.03)
                     ZIndex: =8
 
-                Icon1 As icon.ChevronDown:
-                    Color: =RGBA(202, 202, 202, 1)
-                    Fill: =RGBA(255, 255, 255, 1)
-                    FocusedBorderThickness: =0
-                    Height: =rectangleYearSLS.Height/8
-                    Icon: =Icon.ChevronDown
-                    OnSelect: =Select(Parent)
-                    Visible: |
-                        = //locInfoExpanded 
-                         false
-                    Width: =Parent.Width/58
-                    X: =rectangleYearSLS.Width/2.0
-                    Y: =rectangleYearSLS.Height/1.035
-                    ZIndex: =9
-
-                Icon2 As icon.HorizontalLine:
+                iconLine1LSLS As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     Fill: =RGBA(202, 202, 202, 1)
                     FocusedBorderThickness: =0
@@ -598,20 +583,20 @@ SubmittedLeadScreen As screen:
                     Y: =Parent.Y/3
                     ZIndex: =10
 
-                Icon2_1 As icon.HorizontalLine:
+                iconLine2SLS As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
                     Fill: =RGBA(202, 202, 202, 1)
                     FocusedBorderThickness: =0
                     Height: =rectangleYearSLS.Height/2
                     Icon: =Icon.VerticalLine
                     OnSelect: =Select(Parent)
-                    Visible: =If(btnheaderCL_1.Text="Quoted Leads" ||"Sold Leads",true,false)
+                    Visible: =If(btnheaderSLS.Text="Quoted Leads" ||"Sold Leads",true,false)
                     Width: =2
                     X: =lblTotalIncentivesSLS.X
                     Y: =Parent.Y/3
                     ZIndex: =11
 
-                Button3 As button:
+                btnLeadsSLS As button:
                     BorderColor: =RGBA(237, 237, 237, 1)
                     BorderThickness: =4
                     DisabledBorderColor: =RGBA(237, 237, 237, 1)
