--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -29,7 +29,7 @@ ViewDetailsScreen As screen:
             X: =0.00
             ZIndex: =1
 
-            IconMenuDS_2 As icon.Hamburger:
+            IconMenuVDS As icon.Hamburger:
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =Parent.Height
                 Icon: =Icon.Hamburger
@@ -41,7 +41,7 @@ ViewDetailsScreen As screen:
                 Y: =11
                 ZIndex: =4
 
-            imgSchindlerLogoDS_2 As image:
+            imgSchindlerLogoVDS As image:
                 AlignInContainer: =AlignInContainer.Center
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
@@ -55,7 +55,7 @@ ViewDetailsScreen As screen:
                 X: =0.00
                 ZIndex: =5
 
-            iconBackCL_3 As icon.BackArrow:
+            iconBackVDS As icon.BackArrow:
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =Parent.Height/2
                 Icon: =Icon.ChevronLeft
@@ -69,7 +69,7 @@ ViewDetailsScreen As screen:
                 Y: =11
                 ZIndex: =6
 
-            lblHeaderDS_3 As label:
+            lblHeaderVDS As label:
                 AlignInContainer: =AlignInContainer.Center
                 DisplayMode: =DisplayMode.View
                 Font: =Font.Arial
@@ -83,11 +83,11 @@ ViewDetailsScreen As screen:
                     =//21.36
                     If(Parent.Width<500,14,Parent.Width>500,20)
                 Text: ="Technician Lead Generation"
-                Width: =Parent.Width-imgSchindlerLogoDS_2.Width-IconMenuDS_2.Width-Button2_3.Width-60
+                Width: =Parent.Width-imgSchindlerLogoVDS.Width-IconMenuVDS.Width-btnUserNameVDS.Width-60
                 X: =96.12
                 ZIndex: =7
 
-            Button2_3 As button:
+            btnUserNameVDS As button:
                 AlignInContainer: =AlignInContainer.Center
                 BorderColor: =Color.Red
                 Color: =RGBA(0, 0, 0, 1)
