--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -127,7 +127,7 @@ ViewDetailsScreen As screen:
             Y: =ctnHeaderVDS.Y+ctnHeaderVDS.Height+10
             ZIndex: =2
 
-            btnheaderCL_2 As button:
+            btnheaderVDS As button:
                 BorderColor: =RGBA(219, 219, 219, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 DisplayMode: =DisplayMode.View
