--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -143,7 +143,7 @@ ViewDetailsScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-        Container2 As groupContainer.verticalAutoLayoutContainer:
+        ctnMiddleVDS As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
@@ -159,7 +159,7 @@ ViewDetailsScreen As screen:
             ZIndex: =3
 
             SummaryForm_3 As form:
-                AlignInContainer: =AlignInContainer.Center
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DataSource: =LeadInformations
                 DefaultMode: =FormMode.View
                 Fill: =RGBA(255, 255, 255, 1)
@@ -1508,6 +1508,7 @@ ViewDetailsScreen As screen:
                 ZIndex: =2
 
             "glryImageLSS_2 As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
+                AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =RGBA(39, 113, 194, 1)
                 DelayItemLoading: =true
                 Fill: =RGBA(255, 255, 255, 1)
