--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -164,7 +164,7 @@ ViewDetailsScreen As screen:
                 DefaultMode: =FormMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =0
-                Height: ='Contract Number_DataCard1_3'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+'CustomerName _DataCard2'.Height+'CustomerName _DataCard2'.Height+20
+                Height: ='Contract NumberVDS'.Height+'Building Name_DataCard2_3'.Height+PinCode_DataCard2_3.Height+Address_DataCard2_3.Height+UnitCount_DataCard3_3.Height+UnitDescription_DataCard3_3.Height+PrimaryScopeofWorkLID_DataCard1.Height+SecondaryScopeofWorkLID_DataCard1.Height+ManuallyScopeOfWork_DataCard3_3.Height+EstimatedHours_DataCard1_4.Height+Material_DataCard1_4.Height+'Unit Down_DataCard2_4'.Height+'Additional expenses required_DataCard2_3'.Height+'Travel Required_DataCard2_3'.Height+'Communicated to Customer_DataCard2_3'.Height+'CustomerName _DataCard2'.Height+'CustomerName _DataCard2'.Height+20
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =400
@@ -173,7 +173,7 @@ ViewDetailsScreen As screen:
                 Y: =10
                 ZIndex: =1
 
-                "'Contract Number_DataCard1_3' As typedDataCard.textualEditCard":
+                "'Contract NumberVDS' As typedDataCard.textualEditCard":
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
                     DataField: ="crd59_contractnumber"
@@ -184,13 +184,13 @@ ViewDetailsScreen As screen:
                     Height: =50
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_contractnumber")
                     Required: =false
-                    Update: =DataCardValue25_3.Text
+                    Update: =IntxtContractNumberVDS.Text
                     Width: =738
                     X: =0
                     Y: =0
                     ZIndex: =1
 
-                    DataCardKey26_3 As label:
+                    lblContractNumberVDS As label:
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
                         FontWeight: =FontWeight.Semibold
@@ -205,7 +205,7 @@ ViewDetailsScreen As screen:
                         Y: =10
                         ZIndex: =1
 
-                    DataCardValue25_3 As text:
+                    IntxtContractNumberVDS As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         Default: |-
                             =//Parent.Default
@@ -229,10 +229,10 @@ ViewDetailsScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =DataCardKey26_3.Y + DataCardKey26_3.Height 
+                        Y: =lblContractNumberVDS.Y + lblContractNumberVDS.Height 
                         ZIndex: =2
 
-                    ErrorMessage26_3 As label:
+                    ErrorMessageContractNumberVDS As label:
                         AutoHeight: =true
                         Height: =10
                         Live: =Live.Assertive
@@ -245,18 +245,18 @@ ViewDetailsScreen As screen:
                         Visible: =Parent.DisplayMode=DisplayMode.Edit
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =DataCardValue25_3.Y + DataCardValue25_3.Height
+                        Y: =IntxtContractNumberVDS.Y + IntxtContractNumberVDS.Height
                         ZIndex: =3
 
-                    StarVisible26_3 As label:
+                    StarVisibleContractNumberVDS As label:
                         Align: =Align.Center
-                        Height: =DataCardKey26_3.Height
+                        Height: =lblContractNumberVDS.Height
                         Size: =21
                         Text: ="*"
                         Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                         Width: =30
                         Wrap: =false
-                        Y: =DataCardKey26_3.Y
+                        Y: =lblContractNumberVDS.Y
                         ZIndex: =4
 
                 "'Building Name_DataCard2_3' As typedDataCard.textualEditCard":
