--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -1423,7 +1423,7 @@ ViewDetailsScreen As screen:
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_buildingname")
                     Required: =false
                     Update: =DataCardValue33_3.Text
-                    Width: =738
+                    Width: =Parent.Width
                     X: =0
                     Y: =1
                     ZIndex: =1
